--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -670,7 +670,7 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url(img/dash-map.png);
+    background-image: url(img/dash-map.jpg);
     background-position: center;
     background-repeat: no-repeat;
 }
